Clean up some style warnings (#777)